--- a/Entrenamiento.ipynb
+++ b/Entrenamiento.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "9cc1002c-b611-4166-beba-b02aadb9f2c2",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "dd8d96e2-5e89-484b-b843-9be450553431",
    "metadata": {},
    "outputs": [
@@ -131,24 +131,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 01 | train_loss=0.1933 acc=0.885 | val_loss=1.4591 acc=0.473 | lr=3.00e-04\n",
-      "Epoch 02 | train_loss=0.0654 acc=0.969 | val_loss=0.7444 acc=0.768 | lr=3.00e-04\n",
-      "Epoch 03 | train_loss=0.0534 acc=0.973 | val_loss=0.4690 acc=0.854 | lr=3.00e-04\n",
-      "Epoch 04 | train_loss=0.0348 acc=0.989 | val_loss=2.3311 acc=0.496 | lr=3.00e-04\n",
-      "Epoch 05 | train_loss=0.0346 acc=0.985 | val_loss=1.2761 acc=0.668 | lr=3.00e-04\n",
-      "Epoch 06 | train_loss=0.0213 acc=0.993 | val_loss=0.6106 acc=0.825 | lr=1.50e-04\n",
-      "Epoch 07 | train_loss=0.0169 acc=0.993 | val_loss=0.2162 acc=0.945 | lr=1.50e-04\n",
-      "Epoch 08 | train_loss=0.0143 acc=0.995 | val_loss=0.0343 acc=0.982 | lr=1.50e-04\n",
-      "Epoch 09 | train_loss=0.0174 acc=0.992 | val_loss=0.0463 acc=0.982 | lr=1.50e-04\n",
-      "Epoch 10 | train_loss=0.0155 acc=0.993 | val_loss=0.0341 acc=0.984 | lr=1.50e-04\n",
-      "Epoch 11 | train_loss=0.0110 acc=0.994 | val_loss=0.0487 acc=0.979 | lr=1.50e-04\n",
-      "Epoch 12 | train_loss=0.0155 acc=0.995 | val_loss=0.1134 acc=0.953 | lr=1.50e-04\n",
-      "Epoch 13 | train_loss=0.0122 acc=0.995 | val_loss=0.1598 acc=0.937 | lr=7.50e-05\n",
-      "Epoch 14 | train_loss=0.0046 acc=1.000 | val_loss=0.1354 acc=0.945 | lr=7.50e-05\n",
-      "Epoch 15 | train_loss=0.0127 acc=0.995 | val_loss=0.0645 acc=0.979 | lr=7.50e-05\n",
+      "Epoch 01 | train_loss=0.1868 acc=0.888 | val_loss=0.5809 acc=0.755 | lr=3.00e-04\n",
+      "Epoch 02 | train_loss=0.0480 acc=0.983 | val_loss=0.7085 acc=0.789 | lr=3.00e-04\n",
+      "Epoch 03 | train_loss=0.0595 acc=0.973 | val_loss=0.3024 acc=0.883 | lr=3.00e-04\n",
+      "Epoch 04 | train_loss=0.0296 acc=0.988 | val_loss=0.1360 acc=0.953 | lr=3.00e-04\n",
+      "Epoch 05 | train_loss=0.0186 acc=0.993 | val_loss=0.0790 acc=0.966 | lr=3.00e-04\n",
+      "Epoch 06 | train_loss=0.0299 acc=0.991 | val_loss=0.0998 acc=0.963 | lr=3.00e-04\n",
+      "Epoch 07 | train_loss=0.0228 acc=0.992 | val_loss=0.0714 acc=0.971 | lr=3.00e-04\n",
+      "Epoch 08 | train_loss=0.0202 acc=0.992 | val_loss=0.0315 acc=0.992 | lr=3.00e-04\n",
+      "Epoch 09 | train_loss=0.0277 acc=0.988 | val_loss=0.0363 acc=0.984 | lr=3.00e-04\n",
+      "Epoch 10 | train_loss=0.0150 acc=0.995 | val_loss=0.0661 acc=0.984 | lr=3.00e-04\n",
+      "Epoch 11 | train_loss=0.0144 acc=0.995 | val_loss=0.0449 acc=0.987 | lr=1.50e-04\n",
+      "Epoch 12 | train_loss=0.0169 acc=0.995 | val_loss=0.0290 acc=0.987 | lr=1.50e-04\n",
+      "Epoch 13 | train_loss=0.0110 acc=0.996 | val_loss=0.0375 acc=0.990 | lr=1.50e-04\n",
       "Early stopping: sin mejora en val_acc por 5 épocas.\n",
       "\n",
-      "Mejor val_acc = 0.984. Pesos guardados en: mobilenetv3_binaria_best.pt\n"
+      "Mejor val_acc = 0.992. Pesos guardados en: mobilenetv3_binaria_best.pt\n"
      ]
     }
    ],
@@ -163,7 +161,7 @@
     "PATIENCE = 5  # early stopping por falta de mejora en val_acc\n",
     "\n",
     "# Asegura reproducibilidad básica \n",
-    "torch.manual_seed(42)\n",
+    "torch.manual_seed(2908) #42\n",
     "\n",
     "\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
@@ -260,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "5f1e756e-8948-4f54-aef1-9924caa98f05",
    "metadata": {},
    "outputs": [
@@ -271,14 +269,14 @@
       "\n",
       "=== MATRIZ DE CONFUSIÓN ===\n",
       "[[232   1]\n",
-      " [  5 145]]\n",
+      " [  3 147]]\n",
       "\n",
       "=== MÉTRICAS POR CLASE ===\n",
-      "con_pez    → Precision: 0.979 | Recall: 0.996 | F1-score: 0.987\n",
-      "vacio      → Precision: 0.993 | Recall: 0.967 | F1-score: 0.980\n",
+      "con_pez    → Precision: 0.987 | Recall: 0.996 | F1-score: 0.991\n",
+      "vacio      → Precision: 0.993 | Recall: 0.980 | F1-score: 0.987\n",
       "\n",
       "=== ACCURACY GLOBAL ===\n",
-      "0.984\n",
+      "0.990\n",
       "\n",
       "Interpretación:\n",
       " - Alta precisión en 'vacio' → el modelo elimina pocos frames con peces.\n",
